--- a/client/main.html
+++ b/client/main.html
@@ -21,5 +21,6 @@
 	<div id="output">
 		<canvas id="output-canvas" width="300" height="600"></canvas>
 	</div>
+	<canvas id="input-canvas" width="300" height="600"></canvas>
 </div>
 </template>
