--- a/client/main.html
+++ b/client/main.html
@@ -17,6 +17,9 @@
 		<div class="slide-container">
 			<input type="range" min="1" max="100" value="50" class="slider" id="contrast-range">
 		</div>
+		<div id="progress-container">
+			<div id="progress"></div>
+		</div>
 	</div>
 	<div id="output">
 		<canvas id="output-canvas" width="300" height="600"></canvas>
