--- a/client/main.html
+++ b/client/main.html
@@ -10,16 +10,24 @@
 <div id="main">
 	<div id="controls">
 		<div id="file-chooser-container">
-			<label id="file-chooser-label">Choose Image File
+			<label id="file-chooser-label">Choose Image File 
 				<input type="file" id="image-file-chooser" />
 			</label>
+		</div>
+		<div>
+			<input type="radio" name="contrast-type" value="hue" id="contrast-type-hue">
+			<label for="contrast-type-hue">Hue</label>
+			<input type="radio" name="contrast-type" value="sat" id="contrast-type-sat">
+			<label for="contrast-type-sat">Saturation</label>
+			<input type="radio" name="contrast-type" value="val" id="contrast-type-val" checked>
+			<label for="contrast-type-val">Value</label>
 		</div>
 		<div class="slide-container">
 			<input type="range" min="1" max="100" value="50" class="slider" id="contrast-range">
 		</div>
-		<div id="progress-container">
-			<div id="progress"></div>
-		</div>
+<!-- 		<div id="progress-container"> -->
+<!-- 			<div id="progress"></div> -->
+<!-- 		</div> -->
 	</div>
 	<div id="output">
 		<canvas id="output-canvas" width="300" height="600"></canvas>
