--- a/client/main.html
+++ b/client/main.html
@@ -22,8 +22,11 @@
 			<input type="radio" name="contrast-type" value="val" id="contrast-type-val" checked>
 			<label for="contrast-type-val">Value</label>
 		</div>
-		<div class="slide-container">
+		<div id="slider-container">
 			<input type="range" min="1" max="100" value="50" class="slider" id="contrast-range">
+		</div>
+		<div id="spinner">
+			<img src="spinner.gif"/>		
 		</div>
 <!-- 		<div id="progress-container"> -->
 <!-- 			<div id="progress"></div> -->
