--- a/client/main.html
+++ b/client/main.html
@@ -33,6 +33,7 @@
 				<input type="range" min="1" max="100" value="50" class="slider" id="contrast-range">
 			</div>
 			{{#if isContrastComputed}}
+				<div id="reset-button" class="button">Reset</div>
 				<div id="find-contours-button" class="button">Find Contours</div>
 			{{/if}}
 		{{/if}}
