--- a/client/main.html
+++ b/client/main.html
@@ -53,5 +53,6 @@
 		<canvas id="output-canvas" width="300" height="600"></canvas>
 	</div>
 	<canvas id="input-canvas" width="300" height="600"></canvas>
+	<img id="input-image"/>
 </div>
 </template>
