--- a/client/main.html
+++ b/client/main.html
@@ -53,6 +53,7 @@
 		<canvas id="output-canvas" width="300" height="600"></canvas>
 	</div>
 	<canvas id="input-canvas" width="300" height="600"></canvas>
-	<img id="input-image"/>
+	<img id="input-image" class="hidden"/>
+	<img id="edge-image" class="hidden"/>
 </div>
 </template>
