--- a/client/main.html
+++ b/client/main.html
@@ -73,6 +73,10 @@
 				</div>
 				{{#if isEdgesComputed}}
 					<div class="control-section">
+						<label >
+							Radius: {{contourRadius}}<br/>
+							<input type="range" min="2" max="20" value="{{contourRadius}}" class="slider" id="contour-radius-range">
+						</label>
 						<div id="draw-contours-button" class="button">Draw Contours</div>
 					</div>
 				{{/if}}
