--- a/client/main.html
+++ b/client/main.html
@@ -78,6 +78,9 @@
 							<input type="range" min="2" max="20" value="{{contourRadius}}" class="slider" id="contour-radius-range">
 						</label>
 						<div id="draw-contours-button" class="button">Draw Contours</div>
+						{{#if isCountourDrawn}}
+							<div id="save-image-button" class="button">Save Image</div>
+						{{/if}}
 					</div>
 				{{/if}}
 				<div id="reset-button" class="button">Reset</div>
